[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/textures/actors/togglebutton.png" type="Texture" id=1]
[ext_resource path="res://scenes/buttons/ToggleButton.gd" type="Script" id=2]
[ext_resource path="res://scenes/components/PositionSnapper.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 7, 1.5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Togglebutton:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( -11, 2, -10, 1, -9, -2, 9, -2, 10, 1, 11, 2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Toggle"
length = 0.605
step = 0.055
tracks/0/type = "value"
tracks/0/path = NodePath("Togglebutton:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.055, 0.11, 0.165, 0.22, 0.275, 0.33, 0.385, 0.44, 0.495, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionPolygon2D:polygon")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.605 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ PoolVector2Array( -11, 2, -10, 1, -9, -2, 9, -2, 10, 1, 11, 2 ), PoolVector2Array( -11, 2, -10, 1, -9, 0, 9, 0, 10, 1, 11, 2 ) ]
}

[node name="ToggleButton" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Togglebutton" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 9

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -11, 2, -10, 1, -9, -2, 9, -2, 10, 1, 11, 2 )

[node name="Detection" type="Area2D" parent="."]
modulate = Color( 0.196078, 1, 0, 1 )
light_mask = 0
collision_layer = 8
collision_mask = 28
input_pickable = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
position = Vector2( 0, -1.5 )
shape = SubResource( 6 )

[node name="MainAnimations" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/Toggle = SubResource( 3 )

[node name="PositionSnapper" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 2 )

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="animation_finished" from="MainAnimations" to="." method="_on_MainAnimations_animation_finished"]
